syntax = "proto3";

package demo;

service GeoService {
    rpc getAllCountries (GeoPingReq) returns (GeoReply) {}
    rpc getAllStates (GeoGetStateReq) returns (GeoReply) {}
    rpc getAllCities (GeoGetCityReq) returns (GeoReply) {}
    rpc getCountryCityByIP (GeoGetCountryCityByIPReq) returns (GeoReply) {}
}

message GeoPingReq {}

message GeoReply {
    string message = 1;
}

message GeoGetStateReq {
    string country = 1;
}

message GeoGetCityReq {
    string city = 1;
}

message GeoGetCountryCityByIPReq {
    string ip = 1;
}
